--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "mandelbrot.h": "c",
-        "string": "c"
+        "string": "c",
+        "string_view": "c",
+        "tuple": "c",
+        "vector": "c"
     }
 }
