--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,6 +4,7 @@
         "string": "c",
         "string_view": "c",
         "tuple": "c",
-        "vector": "c"
+        "vector": "c",
+        "functional": "c"
     }
 }
